# dify-thesys

./: .dockerignore  README.md  changes.md  explainer.md  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Dockerfile.source
api/configs/feature/: __init__.py
api/core/app/task_pipeline/: easy_ui_based_generate_task_pipeline.py
api/core/base/tts/: app_generator_tts_publisher.py
api/libs/: c1_plaintext.py
api/services/: account_service.py
api/services/plugin/: bundled_plugin_service.py  plugin_service.py
api/tests/test_containers_integration_tests/services/plugin/: test_plugin_service.py
api/tests/unit_tests/core/app/task_pipeline/: test_easy_ui_based_generate_task_pipeline_core.py
api/tests/unit_tests/core/base/: test_app_generator_tts_publisher.py
api/tests/unit_tests/libs/: test_c1_plaintext.py
api/tests/unit_tests/services/: test_account_service.py
api/tests/unit_tests/services/plugin/: test_bundled_plugin_service.py
docker/: docker-compose.source.yaml
local-plugins/thesys/: README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
local-plugins/thesys/models/llm/: _position.yaml  c1-anthropic-claude-sonnet-4.6-v-20260331.yaml  c1-openai-gpt-5-v-20251230.yaml  llm.py
local-plugins/thesys/provider/: thesys.py  thesys.yaml
local-plugins/thesys/tests/: test_handle_response.py  test_validate_credentials.py
patches/: @thesysai__genui-sdk@0.9.2.patch
scripts/: package-thesys-plugin.sh
web/: Dockerfile.source  next.config.ts  package.json
web/app/: layout.tsx
web/app/components/base/chat/chat/: hooks.ts
(+15 files in other folders)
