[project]
name = "thesys-provider-local"
version = "0.1.0"
description = "Dedicated Thesys model provider for Dify"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin==0.7.2",
    "pydantic==2.12.0",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
